+[[Kategorie:Sveden]]; ±[[Kategorie:Aktiviste]]→[[Kategorie:Activisme]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Greta_Thunberg.mw
+++ b/Greta_Thunberg.mw
@@ -1,4 +1,4 @@
-[[Afbeelding:Greta_Thunberg_urges_MEPs_to_show_climate_leadership_%2849618310531%29_%28cropped%29.jpg|thumb|250px|Greta Thunberg in määrt 2020]]
+[[Afbeelding:Greta Thunberg urges MEPs to show climate leadership (49618310531) (cropped).jpg|thumb|250px|Greta Thunberg in määrt 2020]]
 
 '''Greta Tintin Eleonora Ernman Thunberg''' (van den [[3 jannewaori|3. januåri]] [[2003]]) is ne [[Zweden|sweydske]] miliöö-aktiviste. See is der internationaal üm bekend ewörden dat see wearldleiders uutdaagden üm unmiddellik wat te doon an [[klimaatverandering]]. Thunberg völ anvangelik up ümdat se sou jung was en sou rechtuut sunder ümhaal küürden. Dat deade se beide vöär grupen en politike leiders. Dee lätsten deade se nen skuur döär de beyne ümdat see vünd at dee te weinig deaden teagen wat see ne klimaatkrisis nöömt.
 
@@ -6,5 +6,6 @@ Thunberg begün öär aktivisme med öäre olden oaverhalen üm öären leavenss
 
 Döär öäre rappe beklimming van et wearldpodium is see tegelyke ne leidster wörden as en doolwit vöär kritik. Öär invlood up de wearldtop wördt döär de [[Groutbrittannie|britske]] krante [[The Guardian]] et ''Greta-effekt'' enöömd. See hevt al machtig vöäle prysen ewünnen, sou as ne earelidmåtskap vöär de Kring van Köäninglike Skotske Geografiske Gemeynskap, ne vermelding döär Time as eyne van de 100 meyst invloodryke lüde up de wearld, de jungste Time Persoon van et Jår, upname in Forbes' lyste van 100 Machtigste Vrouwlüde en twey upeynvolgende nominatys vöär de Nobelprys vöär de Vreyde (2019 en 2020).
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Aktiviste]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Activisme]]
+[[Kategorie:Sveden]]
