--- a/Kentucky_Fried_Chicken.mw
+++ b/Kentucky_Fried_Chicken.mw
@@ -1,5 +1,5 @@
 [[Bestaand:KFC_logo.png|thumb|right|200px|Logo van Kentucky Fried Chicken]]
-[[bestaand:Kentucky Fried Chicken world map.PNG|thumb|right|200px|Laanden woer as KFC zit in et blauw]]
+[[bestaand:Kentucky Fried Chicken world map.PNG|thumb|right|200px|Laanden woer as KFC zit in et rood]]
 
 '''Kentucky Fried Chicken '''(meesttieds ofkortt töt '''''KFC''''') is een [[Verenigde Stoaten|Amerikaans]] [[fastfood]]-bedrief met 16.000 vestigingen in 100 laanden. Et bedrief dut met frituurde [[hoonder]]produkte. Rechtevoort vaalt et oonder de KFC Corporation. Et is ne [[franchise]]ketten.
 
