Versy 311626 van [[Special:Contributions/2A02:A447:CF04:1:D0C2:787E:7E29:1645|2A02:A447:CF04:1:D0C2:787E:7E29:1645]] ([[User talk:2A02:A447:CF04:1:D0C2:787E:7E29:1645|oaverleg]]) weaderümmedraid >> Gin twentsk, mär sallandsk in de NSS (dat likt up twentsk, mär wördt up syn sallandsk uutespröäken)

--- a/Jöädendom.mw
+++ b/Jöädendom.mw
@@ -54,6 +54,6 @@ Disse wördet hyr in et kört weader-egeaven an de hande van et jöädske gebeds
 ''Ik gelöyve d'r vulleydig an,''
 13. dat der eyne opstanding van de douden sal weasen op 'n tyd wat de Skepper, wee syn name preysen is en wee syn faam sou houge en vöär altyd verheaven is, et wil.
 
-{{Dialekt|twd}}
+{{Dialekt|sdz}}
 
 [[Kategorie:Jeudendom| ]]
