*Empty MediaWiki Message*

--- a/Syllabiske_konsonant.mw
+++ b/Syllabiske_konsonant.mw
@@ -1,4 +1,4 @@
-Nen '''syllabisken konsonant''', '''lettergreypmedklinker''' of minder precys: ''ineslikkeden klank'' düüdt in de [[sproakenkeunde|språkenkünde]] up nen medklinker (konsonant) den as ne heyle syllabe (lettergreyp) vervangt. In et neadersassisk wördt dit 'inslikken' nöömd. Med name et [[Tweants|twentsk]] is hyrümme bekend, al is et en kenmark van alle neadersassiske varianten (med uutsündering van en paar [[Achterhoek|achterhookske en lymerske dialekten]]). Et fenomeen kümt skounwal ouk in andere germaanske språken vöär, sou as et [[Duuts|hougdüütsk]], [[engels]]k, [[westvlaamsk]] en de [[noordgermaans|noordgermaanske]] språken.
+Nen '''syllabisken konsonant''', '''lettergreypmedklinker''' of in ümmegangsspråke nen ''ineslikkeden klank'', düüdt in de [[sproakenkeunde|språkenkünde]] up nen medklinker (konsonant) den as ne heyle syllabe (lettergreyp) vervangt. In et neadersassisk wördt dit 'inslikken' nöömd. Med name et [[Tweants|twentsk]] is hyrümme bekend, al is et en kenmark van alle neadersassiske varianten (med uutsündering van en paar [[Achterhoek|achterhookske en lymerske dialekten]]). Et fenomeen kümt skounwal ouk in andere germaanske språken vöär, sou as et [[Duuts|hougdüütsk]], [[engels]]k, [[westvlaamsk]] en de [[noordgermaans|noordgermaanske]] språken.
 
 In et neadersassisk kryget alle wöörde dee as eandiget up ''-en'' nen syllabisken konsonant: ''loupen'' wördt *''loupm'', ''eaten'' wördt *''eatn'', ''koaken'' wördt ''koakng''. In et [[internationaal klaankenskrift|internationale klankenskrivt]] (IPA) wördt dit kenmark angeaven med nen korten rechtupstånden streyp under et klankteyken. As et klankteyken nen hanger hevt, wördt he der boavenup esat.
 
