--- a/Ni'j-Heeten.mw
+++ b/Ni'j-Heeten.mw
@@ -1,6 +1,6 @@
 {{Ploats in Nederlaand
-| naam = Ni'j Heeten
-| soorte = doarp
+| naam = Ni'j-Heeten
+| soorte = dörp
 | bestansnaam vlagge =  
 | bestansnaam wapen =  
 | lokasie =
@@ -19,6 +19,7 @@
 | webstee = [http://www.nieuwheeten-online.nl]
 | region = NL-OV
 }}
+[[ofbeelding:Nieuw Heeten, parochiekerk Sint Joseph foto1 2012-09-09 12.47.jpg|thumb|250px|right|Ni'j-Heeten, parochiekärk Sint Joseph]]
 '''Ni'j-Heeten''' is een dörpien in [[Sallaand]] en lig in de [[Oaweriessel|Oaveriessel]]se gemiente [[Roalte|Raolte]]. Et dörp had in [[2020]] zo um en naobi'j 1150 inwoners<ref>Maondciefers van et CBS oaver bevolking</ref>
 
 Et Dörp lig tussen [[Hooltn|Holten]] en [[Roalte|Raolte]] in de weilaanden an de rand van de [[Sallaandse Heuvelrugge]]. Er umhen ligt ook de dörpen [[Hoarle (Healdern)|Haorle]], [[Heetn|Heeten]], [[Oknbrook|Okkenbroek]], [[Lettele]] en [[Nijverdal]].  
