--- a/Ni'j-Heeten.mw
+++ b/Ni'j-Heeten.mw
@@ -44,7 +44,7 @@ In et letste weekend van de [[bouwvakvekantie]] is er elk jaor een dörpsfeest: 
 * [[Sven Boekelder]] ([[1994]]), veurmaolig veurzitter van [[Gumbo Millenium]] en [[Studenten Oaverleg Orgaan Zwolle]]
 * [[Hanne van Rossum]] ([[1996]]), [[Handbal|handbalster]]
 
-== Uutgoande koppelings ==
+== Uutgaonde koppelings ==
 * [http://www.nieuwheeten-online.nl/ Nieuwheeten-online]
 *[https://svnieuwheeten.nl/ Webstea van SV Nieuw Heeten]
 
