--- a/Zwientietikken.mw
+++ b/Zwientietikken.mw
@@ -10,7 +10,7 @@ Umdet t antal deelnemmers onmeundig is, wordt der duur vuurroondes noar ne final
 Der is ne ofzeunderlike kompetisie vuur jonge deelnemmers. Dee doot met in t ''Knientie Tikken'', woerbie den bign vervöngen wörd duur n [[kniende (dier)|knien]].
 
 ==Bezwoar==
-Verskeaidene deerbeskaarmingsorganisasies zo as de Dierenbescherming en AnimalPeace probeert al joaren t gebroek te verbeden, umdet den bign zik op-ejag veult en nen jachterigen tied metmaakt. De roadsleden van de gemeente [[Roalte]] zeet der nog gin kwoad in.
+Verskeaidene deerbeskaarmingsorganisasies zo as de Dierenbescherming en AnimalPeace probeert al joaren t gebroek te verbeden, umdet zee meant at den bign zik op-ejag veult en nen jachterigen tied metmaakt. De roadsleden van de gemeente [[Roalte]] zeet der nog gin kwoad in.
 
 ==Verwiezings==
 <references/>
