*Empty MediaWiki Message*

--- a/Oostfaals.mw
+++ b/Oostfaals.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Ostf.png|right|thumb|Oostfaalsk taalgebeed]]
-'''Oostfaalsk''' is eyne van de dialektgropen van et [[West_Leegsaksisch_(algemain)|Westnederdüütsk]]. Et oostfaalsk wörd in [[Nedersaksen]] en [[Saksen-Anhalt]] espröäken. Oostfaalsk höyrt by et [[Nedersaksisch|neadersaksisk]]. Et oostfaalsk wörd döär weynig löde espröäken, vöäral döärdat der völle steaden as Hannover en Brünswyk bünt, wår vöäral hoogdüütsk espröäken wörd. Et oostfaalsk leevt vöäral noch as halfdialekt van et höygdüütsk. Vake wörd et süvere oostfaalsk esene as [[Westfaals]]k med nen Höygdüütsken invlood. So segt se neet "dy" en "my", mår "dik" en "mik". Ouk hev et oostfaalsk in vultooyde deylwöärden net as achterhooksk, west-twentsk en sallandsk en e-[[vuurplaksel|vöärplaksel]] : ''e''segd, ''e''dån en ''e''gån.
+'''Oostfaalsk''' is eyne van de dialektgropen van et [[West_Leegsaksisch_(algemain)|Westnederdüütsk]]. Et oostfaalsk wörd in [[Nedersaksen]] en [[Saksen-Anhalt]] espröäken. Oostfaalsk höyrt by et [[Nedersaksisch|neadersaksisk]]. Et oostfaalsk wörd döär weynig löde espröäken, vöäral döärdat der völle steaden as Hannover en Brünswyk bünt, wår vöäral hoogdüütsk espröäken wörd. Et oostfaalsk leevt vöäral noch as halfdialekt van et höygdüütsk. Vake wörd et süvere oostfaalsk esene as [[westfaals]]k med nen höygdüütsken invlood. So segt se neet "dy" en "my", mår "dik" en "mik". Ouk hev et oostfaalsk in vultooyde deylwöärden net as achterhooksk, west-twentsk en sallandsk en e-[[vuurplaksel|vöärplaksel]] : ''e''segd, ''e''dån en ''e''gån.
 
 == Dialekte<ref>http://is.muni.cz/th/179666/ff_b/Zuzana_Malaskova__BC_prace.pdf</ref> ==
 * [[Elve-Oostfeels|Elve-Oostfeelsk]]
