--- a/Eenheidsmearvoold.mw
+++ b/Eenheidsmearvoold.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Plural suffixes.png|right|300px|thumb|Vervoegingn van de meervoold warkwoordvörms in t Zuud-Germaanse taalgebied]] 
+[[ofbeelding:Plural suffixes newer version.png|right|300px|thumb|Vervoegingn van de meervoold warkwoordvörms in t Zuud-Germaanse taalgebied]] 
 [[Ofbeelding: Eenheids-pluralislijn.png|thumb|right|300px|Zo löp de eenheidsmearvooldliene (in t rood).<br />
 {{Kaortlegenda|orange|[[Neersassies]]}}
 {{Kaortlegenda|gold|[[veluws]]}}
