--- a/Eenheidsmearvoold.mw
+++ b/Eenheidsmearvoold.mw
@@ -25,7 +25,7 @@ t Neersassies en Westfaals hebt mer eenn vörm vuur alle 2e en 3e perseunn, en n
 De West-Neersassiese dialekn in Neerlaand zeent met egoan met de Neerlaandse mode um "du maakst" te vervangn vuur de beleafdheaidsvorm "iej maakt" (behalve de [[Tweants]]e dialektn van [[Oldnzel]], [[De Lut]] en [[Deanekaamp]], dee't nog "doe" hebt behooldn). t Vanoolds zo beleafde "iej" verlöar in t Neerlaandse gebeed duur de joarn hen t beleawdheaidsgeveul. In völle Duuts-Neersassiese dialektn besteet nog de beleawdheaidsvorm "Ji" teegnoawer t algemene "du".
 
 ==Veluws==
-De Eenheidsmeervooldliene gef ook skeaid tusken t [[Oost-Veluws|Oost-]] en t [[West-Veluws]]. t West-Veluws is doarmet t ennigste Neersassiese dialekt wat op t westn van de liene ligt. Hierumme wör t vroger ook wal bie t Neerfraankies indeeld.
+De Eenheidsmeervooldliene gef ook skeaid tusken t [[Oost-Veluws|Oost-]] en t [[West-Veluws]]. t West-Veluws is doarmet t ennigste Neersassiese dialekt wat op t westn van de liene ligt. Hierumme wör t vroger ook wal bie t Neerfraankies indeeld. Ok variaanten van t [[Sallaands]] ligt ten westen van de lien.
 
 ==Freeske substraat==
 t Fraise substroat is de toalen dij proat worden ien streken woar of vrouger n Invaeoonse toal proat woer en woar de toal dij der nou proat wordt hier van ôf stamt of n ienvloud van ondervinden dut. Dit binnen t Hollaands en [[Westfrais]], de [[Freeske taaln|Fraise toalen]], t [[Stellingwarfs]], t [[Grönnegs-Oostfrais]] en t Sleeswieks. De maiste van dizze toalen hebben de oetgong -en, -e of -n bie aal meervoldsvörms. Tuzzen Hollaand en Broabant en Utrècht en Gelderlaand ligt de isoglosse "wij hebben, jullie hebben, zij hebben"-"wij, wulder maoken, gij/gullie/gulder/julder/gunder maokt, zijle/zullie/zulder/zunder maoken". In Oostfraislaand ligt de isoglosse op stee van de olle toalgrìns tuzzen t Eemsfrais en t Wezerfrais, ongeveer op de westgrìns van de streek Harlingerlaand. 
