*Empty MediaWiki Message*

--- a/Konvenant_neadersassisk.mw
+++ b/Konvenant_neadersassisk.mw
@@ -2,7 +2,7 @@ Et '''konvenant neadersassisk''' (officiele neaderlandsktalige titel: ''Convenan
 
 Et konvenant wördden up 10 oktober 2018 in et pervinsyhüüs in [[Zwolle]] underteykend döär et [[Ministerie van Binnenlaandse Zaken|Ministery van Binnenlandske Saken]], de pervinsys [[Grunnen (provìnzie)|Grönning]], [[Frieslaand|Freeskland]], [[Drenthe|Drente]], [[Oaveriessel|Oaveryssel]] en [[Gelderlaand|Gelderland]], en de Fryske gemeyndes [[Ooststellingwarf|Ouststellingwarv]] en [[Weststellingwarf|Weststellingwarv]].
 
-Et konvenant ''"erkent de regionale taal neadersassisk as een weasenlik, vulwaerdig en sülvstandig underdeyl van de taalsystematik binnen Neaderland"''. Et verplicht de partyen üm höär in te spannen en in de mande te warken üm et neadersassisk te beholden en et gebrüük dervan te bevörderen.
+Et konvenant ''"erkent de regionale taal neadersassisk as een weasenlik, vulwaerdig en sülvstandig underdeyl van de taalsystematik binnen Neaderland"''. De partyen geavt an üm höär in te spannen en in de mande te warken üm et neadersassisk te beholden en et gebrüük dervan te bevörderen. Dit is alleynig neet rechterlik ofdwingbår.
 
 In de tekst wördt benådrukt dat et konvenant neet bedoold is vöär de tötstandkoaming van nye verplichtings, mar vöär bevördering van de taal döär 'de neadersassiske oaverheiden'. De minister van binnenlandske saken kan dårby een anvüllende rulle spöälen.
 
