--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -39,6 +39,8 @@ In 2012 hef minister van Binnenlaandse zaken [[Liesbeth Spies]] laoten weten dat
 
 In 2013 wördden der naor anleiding van een debat over et gebruuk van et [[Westlaauwers Frais|Fries]] een mosie in-ediend um et Neddersaksisch asnog erkent to kriegen. Disse mosie wördden op 4 juni 2013 aofekeurd deur de Tweede Kamer.
 
+In 2018 wördden et [[konvenant neadersassisk]] ondertekend.
+
 ==Et Nedersaksisch-Nederduutse dialektkontinuüm==
 De dialekten van et Nedersaksisch vormen een [[taalkontinuüm]] mit de dialekten van noordelik [[Duutslaand]]. Daorumme wörden alle dialekten van de [[Veluwe]] tot an de [[Pooln|Poolse]] grens ezien as één taal, oek al besteet der gien standardvorm van.
 
