--- a/Haorste.mw
+++ b/Haorste.mw
@@ -23,14 +23,14 @@
 == Geschiedenisse ==
 Bi'j de [[Bomhofsplas]] in Haorste bint in [[1988]] en [[1989]] resten van [[Neanderthaler]]s evunnen. Een bewärkte vuurstienen [[voestbiele]] uut et [[Vrog-Weichselien|Vrog]]-[[Weichselien]] is er ook evunnen. Disse voestbiele is meer als 74.000 jaor old. Et blik een uuterst zelseme vondst te wean die bewiest dät er al meansen (gien Homo sapiens, de ni'jmoeds, medärne means) waren in et [[Vechtdal]] veurdät er hier ni'jmoedse [[Homo sapiens|meansen]] waren<ref> Atlas van de Vecht, https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</ref>.
 
-Vrogger was Haorste zompig. In de winter stund het gebied nog wel iens onder wäter, maar in de zommer ko-j er onder aandere koeën vinden. In de jaoren twintig en därtig is het moerassige laandschop verdwenen deurdät de [[Ofsluutdiek]] en gemaol [[Streukelerziel]] ebouwd wieren.<ref>http://www.plankenloodsje.nl/water.htm</ref> 
+Vrogger was Haorste zompig. In de winter stund het gebied nog wel iens onder wäter, maar in de zommer ko-j er onder aandere koeën vinden. In de jaoren twintig en därtig is het moerassige laandschop verdwenen deurdät de [[Ofsluutdiek]] en gemaol [[Streukelerziel]] ebouwd wieren.<ref>http://www.plankenloodsje.nl/water.htm</ref> Nao de [[Twiede Wereldoorlog]] bint er tal van boederi'jen ebouwd in Haorste umdet et gebied now dreuger was. 
 
 Op de olde [[zaandrugge]] (de Doornweg volgt disse zaandrugge) bi'j Haorste ku-j olde [[Sassiese bouwstiel|Saksische boerderi'jen]] vinden. Disse zaandrugge is ok de ontginningsas ewest van et gebied.<ref>Omgevingsvisie Zwolle. Omgevingsvisie: Mijn Zwolle van morgen, bijlagen https://www.zwolle.nl/sites/default/files/ontwerp-omgevingsvisie-bijlagen.pdf</ref> Het gebied tussen de [[Rieksweg 28|A28]], de zuudelike Roetenweg en de [[Stienwettering]] is as veldontginning ontstaone. 
 
 == Baodem ==
 Vrogger toen as de ofsluutdiek en et gemaol Streukelerziel nog niet bestunden, was Haorste een zompig gebied ([[broeklaand]]). Er was hier vrogger ok een [[broekbos]] te vinden. De grond is in dielen van Haorste [[Moerige gronden|moerig]], zo umsgelieks ten noorden van de [[Bomhofsplasse]]. Ten zuden van de Bomhofsplasse ku-j [[Eerdgronden|eerdgrond]] vinden, ten westen [[Vaaggronden|vaaggrond]] (kalkloos). Körtbi'j de [[ofslag Ommen]] he-j nog een klein stokkien [[Podzolgronden|podzolgrond.]] In het noorden he-j ok nog ([[Eerdveanegronden|eerd]])[[Vene (grondsoorte)|veanegrond]]. Aandere gronden die a-j in Haorste vinden kunt bint rauwveanegrond en [[Humuspodzolgronden|humuspodzolgrond]]. <ref>Atlas van Oaveriessel: baodemkaorte</ref><ref>Atlas van Oaveriessel: Geomorfologische kaorte</ref> 
 
-De Roeten bint een [[kwel]]<nowiki/>gebied. 
+De Roeten bint een [[kwel]]<nowiki/>gebied.
 
 
 == Beziensweerdigheden ==
