/* Plaatsen in Zwolle */

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -36,7 +36,7 @@ Zie ook de pagina [[Zwollerkärspel]]
 == Plaatsen in Zwolle ==
 In de gemeente Zwolle ligt t dörp [[Weensum]], wöör ok n skoele nöör is vernuumd. 
 
-t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Öörst]] (Haorste), [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Katerveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Schelle|Skelle]], [[Spoolde|Spoelde]], [[Veldhoek (Zwolle)|Veld-oek]], [[Wietem]] en [[Zalné]]. 
+t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Öörst]], [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Katerveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Schelle|Skelle]], [[Spoolde|Spoelde]], [[Veldhoek (Zwolle)|Veld-oek]], [[Wietem]] en [[Zalné]]. 
 
 t Ef de volgende woonwieken: [[Aa-landen]], [[Assendörp]], [[Barkum|Bärkum]], [[Diezerpoorte]], [[Anzeland]], [[Oltenbroek]], [[Kamperpoorte]], [[Märsweteringlanden]], [[Stadsägen]], [[Veerallee]], [[Westen-olte]], [[Wipstrik]] en [[Zwolle-Zuud]]
 
@@ -50,8 +50,8 @@ t [[Zwols]] is t [[Nedersaksies]]e stadsdialekt van Zwolle. Volgens de [[Taaltel
 == Zustersteden ==
 * [[Lünen]] ([[Duutslaand|Duutsland]])
 
-==Bekende leu oet Zwolle==
-*[[Ron Jans]], vootbaltrainer van onder meer [[PEC Zwolle]], [[sc Heerenveen]], en [[FC Groningen]]
+==Bekende luu uut Zwolle==
+*[[Ron Jans]], voetbaltrainer van onder meer [[PEC Zwolle]], [[sc Heerenveen]], en [[FC Groningen|FC Grönning]]
 
 == Nedersaksies ==
 * [[Grunnegs]]: ''Zwaol'' (ok espeld as: ''Zwòl'')
