--- a/Gesinus_Gerhardus_Kloeke.mw
+++ b/Gesinus_Gerhardus_Kloeke.mw
@@ -1,3 +1,4 @@
+[[File:Portrait of professor G.G. Kloeke, AHM-F-5946-51.tiff|thumb|G.G. Kloeke]]
 '''Gesinus Gerhardus (G.G.) Kloeke''' ([[Schagen]], [[10 juli]] [[1887]] - [[Leiden]], [[5 november]] [[1963]]) was een [[Sproaklear|taalonderzuker]], beroemd deur zien waark ''De Hollandsche Expansie'', oaver de ienvloed van prestigieuze [[dialekt|dialecten]] op minder prestigieuze dialecten.
 
 ==Studie en hoogleraarschop==
