--- a/Hilversum.mw
+++ b/Hilversum.mw
@@ -8,9 +8,9 @@
 | öppervlakte = 46,19
 | öppervlakte laand = 45,98
 | öppervlakte water = 0,21
-| inwonners = 83.616
-| doatum inwonners = [[1 juli]] [[2006]]
-| dichtheid = 1.819
+| inwonners = 91.110
+| doatum inwonners = [[1 augustus]] [[2020]]
+| dichtheid = 1.998
 | breedtegroad = 52/23/0/N
 | lengtegroad = 5/18/0/E
 | verkeersoader = [[A1]], [[A27]], [[N201]]
@@ -18,7 +18,7 @@
 | postkode = 1200-1223
 | webstie = [http://www.hilversum.nl www.hilversum.nl]
 }}
-'''Hilversum''' is een darp en gemeente in de Nederlandse previnsie [[Noord-Hollaand]] en de belangriekste plaatse in de landstreake [[Et Gooi]]; de plaatse huusvest völle landeleke umroopbedrieve. De gemeente hef ne oppervlakte van 46,19 km² (woarvan 0,21 km² water). Et is de Nederlandse gemeente dee in de 20ste eeuwe et starkst in inwonnertal daalden, van 100.000 in 1958 tot minder as 80.000 in 1999 (bron: [[Centraal Bureau voor de Statistiek|CBS]]). De gemeente neumt zichzelf wal uns tuunstad vanwaege de völle mooie tunen en parken of as '[[villa]]darp' vanweage et vri-j grote antal villa's.
+'''Hilversum''' is een gemeente in de Nederlandse previnsie [[Noord-Hollaand]] en de belangriekste plaatse in de landstreake [[Et Gooi]]; de plaatse huusvest völle landeleke umroopbedrieve. De gemeente hef ne oppervlakte van 46,19 km² (woarvan 0,21 km² water). Et is de Nederlandse gemeente dee in de 20ste eeuwe et starkst in inwonnertal daalden, van 100.000 in 1958 tot minder as 80.000 in 1999 (bron: [[Centraal Bureau voor de Statistiek|CBS]]). De gemeente neumt zichzelf wal uns tuunstad vanwaege de völle mooie tunen en parken of as '[[villa]]darp' vanweage et vri-j grote antal villa's.
 
 == Geskiednis ==
 [[Ofbeelding:Hilversum_karke.jpg|thumb|left|200px|St.-Vituskarke]]
