--- a/Haiku_(dichtvörm).mw
+++ b/Haiku_(dichtvörm).mw
@@ -1,3 +1,5 @@
+[[File:A little cuckoo across a hydrangea(Haiga) by Yosa Buson.jpg|thumb]]
+
 Nen '''Haiku''' is nen [[Japan]]sen [[dichtkeunst|dichtvörm]]. t Besteet oet dree regels van 5, 7 en wier 5 lettergreepn. Nen haiku beskrif ne beleawing van n oognblik, mangs verbeundn an, of inspireerd duur [[zen]]. Nen haiku is nen vingerhood vol met geveul, zoonder doar heel oetgebreaid of vaag oawer te doon. 
 
 == Oorsproonk ==
