--- a/Filedrok.mw
+++ b/Filedrok.mw
@@ -2,7 +2,7 @@
 [[ofbeelding:Stau auf der A8 04.jpg|thumb|400px|File bi'j [[Rutesheim]] op de [[Bundesautobahn 8|A8]]]]
 De '''filedrok''' of '''filezwaorte''' ([[Nederlaands]]: filedruk & filezwaarte) is een meniere um de drokte op een [[autosnelweg]] te meten. Als ienheid wördt [[kilometerminuut]] (kmmin) gebruukt. Het bi'j mekare optellen van allenig hoe lang de file is gef gien goed beeld van hoe drok as t is. Um de filedrok te berekkenen wördt de gemiddelde lengte van een [[file]] vermenigvuldigt met hoe lang de file er stund in minuten. Een file van beveurbeeld twie kilometer die er 50 minuten stund gef een filedrok van 100 kmmin.
 
-In [[2000]] wier et begrip in evoerd deur de [[VerkeersInformatieDienst]] maar et was daorveur al in de jareon 80 in gebruuk.
+In [[2000]] wier et begrip in evoerd deur de [[VerkeersInformatieDienst]] maar et was daorveur al in de jaoren 80 in gebruuk.
 
 Et begrip hold gien rekkening met de snelheid in een file. Een ofname in de filedrok hoeft een weggebruker dus niet metene te märken.
 
