/* Bekeande leu oet Hoksebarge */Informatie toegevoegd

--- a/Hoksebarge.mw
+++ b/Hoksebarge.mw
@@ -36,6 +36,7 @@ Net as in aandere deeln van Tweante was dr in Hoksebarge vanof t 19de joarhoonde
 *[[Karel van de Kate]] - ''komiek''
 *[[Thomas Berge]] (1990) - ''volkszänger''
 *[[Bram Tankink]] ''wielrenner''
+*[[Erik ten Hag]] "voetbal coach"
 
 ==Oetgoande verwiezing==
 * [http://www.haaksbergen.nl/smartsite.htm?ch=DEF&id=107 Webstea van de gemeante Hoksebarge in t Tweants]
