/* Bekeande leu oet Hoksebarge */

--- a/Hoksebarge.mw
+++ b/Hoksebarge.mw
@@ -33,10 +33,10 @@ In t 18de joarhoonderd wör dr ne [[koornmölle]] bouwd, den't ze [[n Koornbloom
 Net as in aandere deeln van Tweante was dr in Hoksebarge vanof t 19de joarhoonderd völle [[textielnieverheaid]]. t Fabriek van D. Jordaan & Zonen leawerden völle woark vuur de inwonners. Op t heugtepeunt leup 80% van t Hoksebargse waarkvolk bie D. Jordaan. Begin zeuwntiger joarn stortn de textielnieverheaid in Tweante in, en dus ook in Hoksebarge.
 
 ==Bekeande leu oet Hoksebarge==
-*[[Karel van de Kate]] - ''komiek''
-*[[Thomas Berge]] (1990) - ''volkszänger''
-*[[Bram Tankink]] ''wielrenner''
-*[[Erik ten Hag]] "voetbal coach"
+*[[Karel van de Kate]] - komiek
+*[[Thomas Berge]] (1990) - volkszänger
+*[[Bram Tankink]] (1978) - wielrenner
+*[[Erik ten Hag]] - voetbalcoach
 
 ==Oetgoande verwiezing==
 * [http://www.haaksbergen.nl/smartsite.htm?ch=DEF&id=107 Webstea van de gemeante Hoksebarge in t Tweants]
