--- a/1921.mw
+++ b/1921.mw
@@ -1,7 +1,8 @@
 {{NavJaor}}
 
 == Gebeurtenissen ==
-* [[29 juli]] - [[Adolf Hitler]] wonnen de eerste veurzitter van de [[NSDAP]]
+*In de lente begun de [[Russische Hongersnood (1921-1922)|Russische Hongersnood]] die töt [[1922]] duurden.
+*[[29 juli]] - [[Adolf Hitler]] wonnen de eerste veurzitter van de [[NSDAP]]
 
 == Geboarn ==
 * [[28 augustus]] - [[Joop Doderer]], Nederlaands acteur
