--- a/1921.mw
+++ b/1921.mw
@@ -1,7 +1,7 @@
 {{NavJaor}}
 
 == Gebeurtenissen ==
-*In de lente begun de [[Russische Hongersnood (1921-1922)|Russische Hongersnood]] die töt [[1922]] duurden.
+*In de vrogge lente begun de [[Russische Hongersnood (1921-1922)|Russische Hongersnood]] die töt [[1922]] duurden. Zo'n 5 miljoon meansen bint oet de tied egaon.
 *[[29 juli]] - [[Adolf Hitler]] wonnen de eerste veurzitter van de [[NSDAP]]
 
 == Geboarn ==
