--- a/1921.mw
+++ b/1921.mw
@@ -2,6 +2,9 @@
 
 == Gebeurtenissen ==
 *In de vrogge lente begun de [[Russische Hongersnood (1921-1922)|Russische Hongersnood]] die töt [[1922]] duurden. Zo'n 5 miljoen meansen bint uut de tied egaon.
+*1 [[meert]] - Begun van de [[Opstaand van Kronstadt]].
+*18 [[meert]] - Et ende van de Opstaand van Kronstadt.
+*[[juni]]- De [[Tambov-Opstaand]] die in [[augustus]] [[1920]] begun wördt neer eslagen.
 *[[29 juli]] - [[Adolf Hitler]] wonnen de eerste veurzitter van de [[NSDAP]]
 
 == Geboarn ==
