--- a/1920.mw
+++ b/1920.mw
@@ -2,6 +2,7 @@
 
 == Gebeurtenissen ==
 * [[SC Heerenveen]] worden op ericht
+*[[augustus]] - De [[Tambov-Opstaand]] begint. De opstaand wier in juni 1921 neer eslagen.
 
 == Geboarn ==
 * [[Ali Brals-Luinge]], Drèentse schriefster en veurdrachtskeunstenaor
