*Empty MediaWiki Message*

--- a/Ruslaand-Duutsers.mw
+++ b/Ruslaand-Duutsers.mw
@@ -1,6 +1,6 @@
 [[Bestaand:Bundesarchiv Bild 137-037542, Westpreußen, Russlanddeutsche Flüchtlinge.jpg|thumb|Etniese Duutsers oet t Wolga-gebeed in n vluchtelingnkaamp in t Duutse [[Schneidemühl]] in 1920]]
 
-Met '''Ruslaand-Duutsers''' ([[Duuts]]: Russlanddeutsche; [[Russies]]: Российские немцы, ''Rossijskie nemtsjie'') of '''Wolga-Duutsers''' (Duuts: Wolgadeutsche, Russisch: Поволжские немцы, ''Povolzhskie nemtsjie'') wordt [[Volksduutsers]] an eduudt dee in Ruslaand of de [[Sovjet-Unie]] wont of wont hebt. Rechtevoort wont öare noakommelingn in [[Ruslaand]], [[Kazakstan]], [[Duutslaand]] en de [[Verenigde Stoaten]].
+Met '''Ruslaand-Duutsers''' ([[Duuts]]: Russlanddeutsche; [[Russies]]: российские немцы, ''rossijskie nemtsjie'') of '''Wolga-Duutsers''' (Duuts: Wolgadeutsche, Russisch: Поволжские немцы, ''povolzhskie nemtsjie'') wordt [[Volksduutsers]] an eduudt dee in Ruslaand of de [[Sovjet-Unie]] wont of wont hebt. Rechtevoort wont öare noakommelingn in [[Ruslaand]], [[Kazakstan]], [[Duutslaand]] en de [[Verenigde Stoaten]].
 
 [[Tsaar|Tsarina]] [[Catharina de Grote]] van Ruslaand leut teegn t eande van t [[18e eeuw|18de joarhoonderd]] Duutse boern komn um de weuste groond kloar vuur laandbouw te maakn. Dit gebuurn wal vaker in de Oost-Europese geskiedenisse. Dr kömn dan ook Neerlaanders (mangs [[Mennonieten]]) met. Dee kömn vuur t grötste deel an de [[Wolga]] te wonn en warn geslötn en slim op zikzelf an eweezn. Doarduur bleef de (Plat)-Duutse kultuur good bewoard. De Ruslaand-Duutsers trouwn feaitelik nooit met de Rusn. Dr kömn wal [[baptisten]]gemeentes duur zeandingswoark. hieroet is oonder mear t [[Broderskop van nit-registreerde baptistn]] ontstoan. Noa n [[Eerstn Wearldoorlog]], oonder t diktatorskop van [[Joseph Stalin|Stalin]] wördn de Ruslaand-Duutsers vervolgd. Dee sleugn op de vlucht en treukn heuwdzakelik noar [[Paraguay]]. Doar stichen ze oonder mear de kolonies [[Freeslaand (Paraguay)|Freeslaand]], [[Voolndam (Paraguay)|Voolndam]], [[Menno (Paraguay)|Menno]], [[Kolonie Neuland|Neuland]] en [[Fernheim]].
 
