*Empty MediaWiki Message*

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -20,7 +20,7 @@ postcode = 8000-8049 |
 webstee = [http://www.zwolle.nl www.zwolle.nl] |
 }}
 [[ofbeelding:Bevolkingspiramide - Gemeente Zwolle (2007).png|thumb|Piramide nao inwoners ([[2007]])|alt=|180x180px]]
-'''Zwolle''' is n gemeente en de [[heufdstad|eufdstad]] van de [[pervincie|provinsie]] [[Oaveriessel|Aoveriessel]] en ok [[Hanze|Anzestad]]. Zwolle ligt an de [[Iessel]], t [[Zwärte Wäter|Zwärte Water]] en an de [[Vechte]]. De gemeente ad in [[januari]] [[2020]] zo'n 128.831 inwoners (bron: CBS) en ef n oppervlakte van 119,28 [[vierkaante kilemeter|km²]].
+'''Zwolle''' is n gemeente en de [[heufdstad|eufdstad]] van de [[pervincie|provinsie]] [[Oaveriessel|Aoveriessel]] en ok [[Hanze|Anzestad]]. Zwolle ligt an de [[Iessel]], t [[Zwärte Wäter|Zwärte Water]] en an de [[Vechte]]. De gemeente ad in [[januari]] [[2020]] zo'n 128.831 inwoners (bron: CBS) en ef n oppervlakte van 119,28 [[vierkaante kilemeter|km²]]. De börgemeister is [[Peter Snijders]] ([[VVD]]).
 
 De inwoners van disse stad numen ze formeel ''Zwollenaeren''. Ze wörren ok wel ''blauwvingers'' of ''bri'jbekken'' enuumd.
 
