−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Tukker]]; +[[Kategorie:Nederlaands presentator]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Dennis_Schouten.mw
+++ b/Dennis_Schouten.mw
@@ -1,8 +1,10 @@
 [[File:Dennis Schouten (POWned).png|thumb|Dennis Schouten (2019)]]
-'''Dennis Schouten''' ([[Eanske]], 20 juli 1995) is een twentske verslaggeaver din sünds 2016 in warken is by de publike ümroop PowNed.
+'''Dennis Schouten''' ([[Eanske]], 20 juli 1995) is een twentske verslaggeaver din sünds 2016 in warken is by de publike ümroop [[PowNed]].
 
 Schouten is up-ewassen in [[Glanerbrug]] en haalden syn mbo-diploma filiaalmanager op het ROC van Twente in [[Hengel (Oaveriessel)|Hengel]]. In mei 2014 begünnen hy filmpys te maken up syn eigen YouTube-kanaal GeenCommentaar. Begün 2016 kapten Schouten med syn hbo-upleiding media, informaty en kommunikaty an Saxion Hogescholen in Enske ümme in warken te gån vöär PowNed. Vöär disse ümroop is he te sene as verslaggeaver.
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+{{DEFAULTSORT:Schouten, Dennis}}
+[[Kategorie:Tukker]]
+[[Kategorie:Nederlaands presentator]]
