[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Huushoolding]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Tuugliende.mw
+++ b/Tuugliende.mw
@@ -32,4 +32,4 @@ Uut ''Allèn'', een gedicht van [[Hans Heyting]] (evunden in ''Scheupers van de 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]].}}
 
 [[Kategorie:Drèents artikel]]
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Huushoolding]]
