--- a/Barack_Obama.mw
+++ b/Barack_Obama.mw
@@ -1,4 +1,4 @@
-[[Bestaand:President_Barack_Obama.jpg|thumb|right|200px|Barack Obama]]
+[[Bestaand:President_Barack_Obama.jpg|thumb|200px|Barack Obama]]
 '''Barack Hussein Obama II''' ([[Honolulu]], [[Hawaii]], [[4 augustus]] [[1961]]) was n 44sten en eerstn [[Afrikaans-Amerikaans|Zwartn]] presideant van [[Verienigde Staoten van Amerika|Amerika]]. Tusken [[3 januwoari]] [[2005]] en [[16 november]] [[2008]] was hee lid van t Amerikaanse Senoat as ofveardiging van de stoat [[Illinois]]. Doarvuur was hee stoatssenator in de wetgeewnde vergaderige van denzelfdn stoat. Op [[20 jannewaori|20 januwoari]] [[2009]] wör hee offisjeel an enömn as presideant.
 
 == Leawnsloop ==
@@ -17,6 +17,7 @@ In [[1989]] leardn hee [[Michelle Robinson]] kenn, woermet as hee trouwdn in [[1
 * [http://www.barackobama.com/ Barack Obama '08]
 * [http://obama.senate.gov/ VS Senaat - Barack Obama]
 
+{{DEFAULTSORT:Obama, Barack}}
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Verenigde Stoatn van Amerika]]
 [[Kategorie:Presideant]]
