--- a/Kamala_Harris.mw
+++ b/Kamala_Harris.mw
@@ -1,4 +1,4 @@
-[[File:Kamala_Harris_official_photo_%28cropped2%29.jpg|thumb|right|200px|Kamala Harris]]
+[[File:Kamala Harris official photo (cropped2).jpg|thumb|200px|Kamala Harris]]
 '''Kamala Devi Harris''' is van den [[20. oktober]] [[1964]]. Seyd [[2017]] is see senatrice vöär den amerikaansken ståt [[Kalifornie]]. Harris hevt ne upleiding as advokåte. In de Amerikaanske presidentsverkesingen van 2020 steyt see kandidåte vöär et vicepresidentskap.
 
 Harris kümt uut [[Oakland, Kalifornie]] en studeerden af an de Universiteiten van Howard en Kalifornia, by den lätsten an de Wetskole van Hastings. Öäre loupbane begün as advokåte in [[Alameda County]], wårnå see antrökken wör voor et distriktsadvokåtskap en later et stadsadvokåtskap van [[San Francisko]]. In [[2003]] wör see benöömd as distriktsadvokåt van San Fransisko. See wör eköäsen töt Advokåt-Generaal van Kalifornië in 2010 en herköäsen in 2014.
@@ -9,6 +9,9 @@ Landelik völ see up döär öäre wyse van undervrågen van medwarkers van [[Do
 
 Harris stelden sikselv presidentskandidåte vöär de verkesingen van 2020 en skeiden der up 3 december 2019 med uut,<ref>[https://www.nytimes.com/2019/12/03/us/politics/kamala-harris-campaign-drops-out.html Herndon, Astead. Goldmacher, Shane. New York Times. “Kamala Harris Is Dropping Out of 2020 Race”.] Uutgeaven en bekeaken up 3 december 2019.</ref> üm ne weake later as vicepresidente vöär [[Joe Biden]] når vöärten te treaden.
 
+<references/>
+
+{{DEFAULTSORT:Harris, Kamala}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Verenigde Stoatn van Amerika]]
 [[Kategorie: Politiek]]
