[[:Kategorie:Verenigde Stoatn van Amerika]] weg-ehaald; [[:Kategorie:Staoten van Amerika]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Ohio_(ståt).mw
+++ b/Ohio_(ståt).mw
@@ -29,4 +29,4 @@ Ohio is groutendeyls noch nen industryståt en stünd in 2015 wat BBP angeyt up 
 
 {{Verenigde Staoten}}
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde Stoatn van Amerika]]
+[[Kategorie:Staoten van Amerika]]
