[[:Kategorie:Verenigde Stoatn van Amerika]] weg-ehaald; [[:Kategorie:Staoten van Amerika]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Noorddakota.mw
+++ b/Noorddakota.mw
@@ -9,4 +9,4 @@ In Noorddakota steyt de KVLY TV-mast, et höygste bouwwark up et [[Westelik Halv
 {{Verenigde Staoten}}
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde Stoatn van Amerika]]
+[[Kategorie:Staoten van Amerika]]
