[[:Kategorie:Verenigde Stoatn van Amerika]] weg-ehaald; [[:Kategorie:Staoten van Amerika]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Nyjersey.mw
+++ b/Nyjersey.mw
@@ -28,4 +28,4 @@ In Nyjersey sint verskillende uutvindingen dån dee wearldwyd in den allen dag b
 {{Verenigde Staoten}}
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde Stoatn van Amerika]]
+[[Kategorie:Staoten van Amerika]]
