--- a/Süüddakota.mw
+++ b/Süüddakota.mw
@@ -29,4 +29,4 @@ Süüddakota is verskeidene målen in beide kamers van et Kungres verteagenwoord
 
 {{Verenigde Staoten}}
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Verenigde Stoatn van Amerika]]
+[[Kategorie:Staoten van Amerika]]
