--- a/Wyoming.mw
+++ b/Wyoming.mw
@@ -29,4 +29,4 @@ Wat politik angeyt steyt Wyoming bekend as konservativ seyd de jåren '50 van de
 {{Verenigde Staoten}}
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie:Verenigde Stoatn van Amerika]]
+[[Kategorie:Staoten van Amerika]]
