--- a/Washington_D.C..mw
+++ b/Washington_D.C..mw
@@ -12,5 +12,7 @@ En lokaal köäsen börgemeister en nen råd van 13 leaden bestüúrt et distrik
 
 <references/>
 
+{{Verenigde Staoten}}
+
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Verenigde Stoatn van Amerika]]
