--- a/Filedrok.mw
+++ b/Filedrok.mw
@@ -15,3 +15,5 @@ Et begrip hold gien rekkening met de snelheid in een file. Een ofname in de file
 ==Verwiezings==
 <references/>
 {{Dialekt|sdz}}
+
+[[Kategorie:Verkeer]]
