[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Rieksweg]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Rieksweg.mw
+++ b/Rieksweg.mw
@@ -158,4 +158,4 @@ Veur de informatie op disse pagina is gebruuk gemaakt van wegenwiki.nl.
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Rieksweg| ]]
