--- a/Moor_(meens).mw
+++ b/Moor_(meens).mw
@@ -10,6 +10,7 @@ De relasie van n moor mit heur kienders wörden an-eduud mit t woord ''[[moorsch
 
 == Zie oek ==
 {{wiktionary|moder}}
+* [[Moedag]]
 * [[Vaor]]
 * [[Kiend]]
 
