−[[Kategorie:Kultuur]]; −[[Kategorie:Amusement]]; +[[Kategorie:Daans]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Daans.mw
+++ b/Daans.mw
@@ -28,5 +28,4 @@ D'r bin slim veul verschillende daanssoorten, hieronder een antal bekende daanss
 * [[Fermaosiedaansen]]
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Kultuur]]
-[[Kategorie:Amusement]]
+[[Kategorie:Daans| ]]
