*Empty MediaWiki Message*

--- a/Allah.mw
+++ b/Allah.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Allah.svg|thumb|Allah in [[kalligrafie]]]]
+[[Bestaand:Allah.svg|thumb|Allah in [[Arabisch]]e [[kalligrafie]]]]
 '''Allah''' ([[Arabisch]]: ''الل'', saementrekking van ''al-ilāh'', de god, diegene die anbeden wodt) is een [[Aramees]] woord veur [[God]], veural bruukt in de [[islam]], mar ok deur [[jodendom|joden]] en [[christendom|kristenen]] uut Arabisch-praotende lanen. 
 
 == Allah in de islam ==
