−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Ooldheaidkeunde]]; +[[Kategorie:Geologie]]; +[[Kategorie:Tied]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Before_Present.mw
+++ b/Before_Present.mw
@@ -6,4 +6,6 @@ Het jaor 1950 is standerd ebleven umdet in de jaoren 50 en 60 een bulte [[kärnp
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Ooldheaidkeunde]]
+[[Kategorie:Geologie]]
+[[Kategorie:Tied]]
