Verwysing nå döärverwyssyde repareerd ([[Venus]] nå [[Venus (planeet)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Gaia-theorie.mw
+++ b/Gaia-theorie.mw
@@ -6,7 +6,7 @@ Lovelock is een unofhangelike weatenskapper (chemikus), ouk is he natuurbeskarme
 ==Teory==
 De Gaia Theory geyt der van dat wy et leaven neet bekyken müttet as lösse dinge. Mar dat alle molekulen, cellen, deren en ekosystemen by mekare as eyne leavende lichame seen müttet.
 
-De gode ümstandigheyden wat wy en andere deren nöydig bint, wörd emaakt döär leavende weysens. Planten maket byvöärbeyld lücht ümme in te ådemen. Et eyne deer hevt et ander as etten nöydig ümme te oaverleaven. Bynå al et [[stikstof]] en [[koolstofdiokside]] in de lücht, kümt of van wat vöärtydsk eleaved hevt. Sunder leaven sol de Aerde der as [[Mars (planeet)|Mars]] of [[Venus]] üütseen.
+De gode ümstandigheyden wat wy en andere deren nöydig bint, wörd emaakt döär leavende weysens. Planten maket byvöärbeyld lücht ümme in te ådemen. Et eyne deer hevt et ander as etten nöydig ümme te oaverleaven. Bynå al et [[stikstof]] en [[koolstofdiokside]] in de lücht, kümt of van wat vöärtydsk eleaved hevt. Sunder leaven sol de Aerde der as [[Mars (planeet)|Mars]] of [[Venus (planeet)|Venus]] üütseen.
 
 In de [[Evolutietheorie|evoluty]] hebbet planten en deren de ümgeaving an ear doon anpassen. Mar andersümme bint de planten en de deren ouk an ear ümgeaving an gån anpassen. Dit hevt de evoluty neet edåne, mar düt he altyden noch.
 
