[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Ekologie]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Gaia-theorie.mw
+++ b/Gaia-theorie.mw
@@ -36,4 +36,4 @@ Vöärearst vünden andere weatenskappers en biologen et mar een vrümd (en somm
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Ekologie]]
