Verwysing nå döärverwyssyde repareerd ([[Rogge]] nå [[raai]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Boertanger_Moor.mw
+++ b/Boertanger_Moor.mw
@@ -13,7 +13,7 @@
 == Ontginning ==
 De ontginning van 't veen gebeurden in 't begun allennig an de raand van 't gebied. Ze mient det [[törf]] as braandstof al slim old is. Bi'j ontginnings in de twiede helfte van de middelieuwen speulden [[klooster]]s een veurnaame rol, veural die van [[Auwerd]] en [[Essen (Hoaren)|Essen]].
 
-'t Veen wördden ok ontgonnen veur de [[laandbouw]]. In de middelieuwen ontwaterden ze 't veen an de raanden van 't gebied veur 't verbouwen van [[rogge]]. De ontwatering zörgen veur vertering en 't dalen van de baodem. Hierdeur kun tussen [[1360]] en [[1500]] de [[Dollert]] grote stokken ofslaon in 't noordoosten van 't gebied.
+'t Veen wördden ok ontgonnen veur de [[laandbouw]]. In de middelieuwen ontwaterden ze 't veen an de raanden van 't gebied veur 't verbouwen van [[raai|rogge]]. De ontwatering zörgen veur vertering en 't dalen van de baodem. Hierdeur kun tussen [[1360]] en [[1500]] de [[Dollert]] grote stokken ofslaon in 't noordoosten van 't gebied.
 
 Vanof de [[16e eeuw|zestiende ieuw]] was de grootschaolige veenontginning reur. De Friese menier van vervenen, mit gebruukmaking van [[knoal (woaterweg)|kenaols]] en wieken, wördden op 't Boertanger Moor introduceerd. De eerste vervenings gebeurden de Hunze bi'jlanges, niet wied of van Stad. De törf wördden oaver dit reviertien of-evoerd. Grunning har veul verlet van braandstof, en de törf uut 't Boertanger Moor was een belangrieke factor veur de ecenomische gruui van Stad.
 
