[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Zoogdier]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Navvel.mw
+++ b/Navvel.mw
@@ -2,4 +2,4 @@ De '''navvel''' is 't littekken dat achterblef noa 't verdreugn van de navvelstr
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Zoogdier]]
