[[:Kategorie:Zoogdier]] weg-ehaald; [[:Kategorie:Hoendachtige]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Hond.mw
+++ b/Hond.mw
@@ -27,4 +27,4 @@ De hond stamt of van de [[wolf]]. Der bint duzende verschillende soorten hunde, 
 {{Wiktionary|hond}}
 
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Zoogdier]]
+[[Kategorie:Hoendachtige]]
