[[:Kategorie:Zoogdier]] weg-ehaald; [[:Kategorie:Hoendachtige]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Wulv.mw
+++ b/Wulv.mw
@@ -18,4 +18,4 @@ Wulven kummen vöäle in vöär up de volkskultuur. [[Wodan]] güngen ait up pad
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Zoogdier]]
+[[Kategorie:Hoendachtige]]
