Sortering van [[:Kategorie:Zoogdier]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Zoogdeers.mw
+++ b/Zoogdeers.mw
@@ -20,4 +20,4 @@ Tusken soortn is dr n groot verskil in ontwikkeling bie de geboorte. Völle [[kn
 <references/>
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Zoogdier]]
+[[Kategorie:Zoogdier| ]]
