−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Geschiedenis van Nederlaand]]; +[[Kategorie:Laand]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Koninkriek_Hollaand.mw
+++ b/Koninkriek_Hollaand.mw
@@ -2,4 +2,5 @@
 Et '''Koninkriek Hollaand''' (toenmaolige spelling: ''Koningrijk Holland'', 1806 - 1810) wodde as vazalstaot deur [[Napoleon Bonaparte]] opricht veur zien dadde breur Lodewijk Napoleon Bonaparte.
 
 [[Kategorie:Stellingwarfs artikel]]
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Geschiedenis van Nederlaand]]
+[[Kategorie:Laand]]
