−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Verienigd Keuninkriek]]; +[[Kategorie:Sporter]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1357,11 +1357,11 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 * Lewis Hamilton: Triple World Champion: The Biography
 
 ==Uutgånde verwysings==
-
 * Officiële websteade: http://www.lewishamilton.com
 * [https://web.archive.org/web/20100309082927/http://www.mclaren.com/theteam/lewis-hamilton.php Lewis Hamilton biography]&nbsp;– McLaren.com
 
-{{DEFAULTSORT:Hamilton, Lewis}}
-[[Kategorie:Wikipedie:Gin Kattegerie]]
-
 {{Dialekt|act|Nysassiske Skryvwyse}}
+
+{{DEFAULTSORT:Hamilton, Lewis}}
+[[Kategorie:Verienigd Keuninkriek]]
+[[Kategorie:Sporter]]
