[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Ofbeelding:Taalkaarte]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Bestaand:Groningen-Oostfriesland2.png.mw
+++ b/Bestaand:Groningen-Oostfriesland2.png.mw
@@ -2,4 +2,4 @@ Prototype, komt loater nog n nijere, mooiere veur
 
 Dialekten en toallienen ien de Nederlaandse pervìnzie ''Grönnen'' (Groningen) en de Duutse laandkraisen ''Leer'', ''Auwerk'' (Auerk, Aurich), ''Witmond'' (Wittmund) en ''Fraislaand'' (Freesland, Friesland) en de stadkraisen ''Emden'' en ''Wilmhoaven'' (Willemshaven, Wilhelmshaven).
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Ofbeelding:Taalkaarte]]
