[[:Kategorie:Geschiedenis]] weg-ehaald; [[:Kategorie:Geschiedenis van Duutslaand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Graofschop_Benthem_(historisch).mw
+++ b/Graofschop_Benthem_(historisch).mw
@@ -192,4 +192,4 @@ In 1810 wördden 't gebied bi'j 't keizerriek Fraankriek edaone. In november 181
 
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Graofschop Benthem]]
-[[Kategorie:Geschiedenis]]
+[[Kategorie:Geschiedenis van Duutslaand]]
