--- a/Gelderse_oorlogen.mw
+++ b/Gelderse_oorlogen.mw
@@ -29,4 +29,4 @@ In [[1538]] kwamp Karel van Gelre oet de tied. [[Willem V van Kleef]] volgden um
 De Gelderse oorlogen kwamen tot ende met ne oaverwinning veur de Bourgondiese Nederlanden. Hierdeur kwamen alle [[Laege Laanden (stoatkunde)|Nederlanden]] under éen centroal gezag, dat van [[Karel V van et Heilige Roomse Riek]]. Veur et ontstoan van et [[Nederland]] van vandage was den uutkomst van de Gelderse Oorlogen van groot belang. Et ontstoan van nen [[Nedersaksisch]]en [[stoat]] bestoande uut [[Gelderlaand]], [[Oaveriessel]], [[Drenthe]], [[Grunnen (provìnzie)|Grunnen]] en [[Friesland|Freeslaand]] was veurkommen. In plaatse doarvan ontstoand tiedens den [[Tachtigjoarigen Oorlog]], ne halve eeuwe later, de splitsing tussen de [[Habsburgse Nederlanden]] in [[Noordeleke Nederlanden|noord]] en [[Zudeleke Nederlanden|zuud]].
 
 [[Kategorie:Achterhooks artikel]]
-[[Kategorie:Geschiedenis]]
+[[Kategorie:Geschiedenis van Nederlaand]]
