--- a/Graofschop_Benthem_(historisch).mw
+++ b/Graofschop_Benthem_(historisch).mw
@@ -193,3 +193,5 @@ In 1810 wördden 't gebied bi'j 't keizerriek Fraankriek edaone. In november 181
 [[Kategorie:Drèents artikel]]
 [[Kategorie:Graofschop Benthem]]
 [[Kategorie:Geschiedenis van Duutslaand]]
+[[Kategorie:Middeleewn]]
+[[Kategorie:Vrogmoderne tied]]
