[[:Kategorie:Vrogmoderne tied]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Gelderse_oorlogen.mw
+++ b/Gelderse_oorlogen.mw
@@ -30,3 +30,4 @@ De Gelderse oorlogen kwamen tot ende met ne oaverwinning veur de Bourgondiese Ne
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Geschiedenis van Nederlaand]]
+[[Kategorie:Vrogmoderne tied]]
