[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Ruumte]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Melkweg_(sternstelsel).mw
+++ b/Melkweg_(sternstelsel).mw
@@ -6,4 +6,4 @@ d' Eerde dreit um zien zunne. De [[zunne]] hef 'n plaatse in'n [[Orionarm]]. n O
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Ruumte]]
