--- a/Oale_Edda.mw
+++ b/Oale_Edda.mw
@@ -1,4 +1,4 @@
-De '''olde Edda''' , ouk wel '''poëtiske Edda''' enöömd, is een tekste uut et middeleywske Ysland (of eigenlik verskillende teksten/leder byeyne). Et besteyt uut een koppel godenleder, dee vöäl vertelt oaver de noorske mytology. Mar der ståt ouk vöäl heldenleder en ofstammings van kuningshüse in.
+De '''olde Edda''' , ouk wel '''poëtiske Edda''' enöömd, is een tekste uut et middeleywske [[Ysland]] (of eigenlik verskillende teksten/leder byeyne). Et besteyt uut een koppel godenleder, dee vöäl vertelt oaver de noorske mytology. Mar der ståt ouk vöäl heldenleder en ofstammings van kuningshüse in.
 
 Et book is belangryk ümdat et vöäl vertelt oaver de godsdeenst en et leaven van de olde skandinavyrs, en düs ouk van unse, germaanske vöärolder, dee kultureyl desülvde ofstamming hebbet en düs arg up mekare lyket.
 
