−[[Kategorie:Wikipedie:Gin Kattegerie]]; +[[Kategorie:Ieslaand]]; +[[Kategorie:Middeleewn]]; +[[Kategorie:Dichtkeunst]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Oale_Edda.mw
+++ b/Oale_Edda.mw
@@ -4,4 +4,6 @@ Et book is belangryk ümdat et vöäl vertelt oaver de godsdeenst en et leaven v
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Ieslaand]]
+[[Kategorie:Middeleewn]]
+[[Kategorie:Dichtkeunst]]
