[[:Kategorie:Wikipedie:Gin Kattegerie]] weg-ehaald; [[:Kategorie:Geleuf]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Panentheïsme.mw
+++ b/Panentheïsme.mw
@@ -4,4 +4,4 @@ Vöäle ortodokse christenen vindet dit mar een eng idey en willet et neet annem
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Wikipedie:Gin Kattegerie]]
+[[Kategorie:Geleuf]]
