--- a/Ekspressionisme.mw
+++ b/Ekspressionisme.mw
@@ -10,4 +10,4 @@ Nå [[Tweede Wereldoorlog|de oorlog]] is der et [[neo-ekspressionisme]] untstån
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Keunst]]
+[[Kategorie:Beeldende keunst]]
