[[:Kategorie:Kunstperiode]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Ekspressionisme.mw
+++ b/Ekspressionisme.mw
@@ -11,3 +11,4 @@ Nå [[Tweede Wereldoorlog|de oorlog]] is der et [[neo-ekspressionisme]] untstån
 {{Dialekt|sdz}}
 
 [[Kategorie:Beeldende keunst]]
+[[Kategorie:Kunstperiode]]
