[[:Kategorie:Kunstperiode]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Impressionisme.mw
+++ b/Impressionisme.mw
@@ -16,3 +16,4 @@ Nå de impressionisten, so in de jåren 90. van de 19. eywe, güngen andere skil
 
 [[Kategorie:Beeldende keunst]]
 [[Kategorie:Geschiedenis]]
+[[Kategorie:Kunstperiode]]
