−[[Kategorie:Keunst]]; −[[Kategorie:Kultuur]]; +[[Kategorie:Kunstperiode]] ([[Wikipedia:HotCat|HotCat.js]])

--- a/Gotiek.mw
+++ b/Gotiek.mw
@@ -33,5 +33,4 @@ Wieter is der nog nen trop regionoale soorten: [[Perpendicularstiel]] en [[Tudor
 [[Kategorie:Achterhooks_artikel]]
 [[Kategorie:Architektuur]]
 [[Kategorie:Bouwstiel]]
-[[Kategorie:Keunst]]
-[[Kategorie:Kultuur]]
+[[Kategorie:Kunstperiode]]
