[[:Kategorie:Keunst]] weg-ehaald; [[:Kategorie:Nederlaandse schilder]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Marjolein_Rothman.mw
+++ b/Marjolein_Rothman.mw
@@ -4,4 +4,4 @@ In 1992 gung zi-j de kunstopleiding op [[AKI Artez|AKI]] in [[Eanske]] doen. Wat
 
 {{Dialekt|sdz}}
 
-[[Kategorie:Keunst]]
+[[Kategorie:Nederlaandse schilder]]
